[gd_scene load_steps=8 format=3 uid="uid://wbv02dpv38tr"]

[ext_resource type="Script" path="res://game_ui/game_ui.gd" id="1_kflq0"]
[ext_resource type="LabelSettings" uid="uid://dlh6u64sm2t2l" path="res://assets/LG_24_grey.tres" id="1_qrr41"]
[ext_resource type="LabelSettings" uid="uid://jso5m4onks1s" path="res://assets/LG_72_Title.tres" id="2_8i34o"]
[ext_resource type="LabelSettings" uid="uid://gepidd6whti3" path="res://assets/LG_48_white.tres" id="3_oodmm"]
[ext_resource type="AudioStream" uid="uid://bbsmdinrdmhk4" path="res://assets/audio/jazzyfrenchy.mp3" id="5_yfpdu"]
[ext_resource type="Texture2D" uid="uid://br0nr713v4i5q" path="res://assets/ui/panel_beige.png" id="6_w6kif"]
[ext_resource type="LabelSettings" uid="uid://da2nh7mqgy3tc" path="res://assets/LG_24_white.tres" id="7_k7v2k"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_kflq0")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VB" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VB"]
layout_mode = 2
text = "LEVEL : "
label_settings = ExtResource("1_qrr41")
vertical_alignment = 1

[node name="AttemptsLabel" type="Label" parent="MarginContainer/VB"]
layout_mode = 2
text = "ESSAI(S) :"
label_settings = ExtResource("1_qrr41")
vertical_alignment = 1

[node name="VB2" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="MarginContainer/VB2"]
layout_mode = 2
size_flags_horizontal = 4
text = "NIVEAU COMPLÉTÉ!"
label_settings = ExtResource("2_8i34o")

[node name="StarsLabel" type="Label" parent="MarginContainer/VB2"]
layout_mode = 2
size_flags_horizontal = 4
text = "⭐⭐⭐"
label_settings = ExtResource("2_8i34o")

[node name="Label2" type="Label" parent="MarginContainer/VB2"]
layout_mode = 2
size_flags_horizontal = 4
text = "APPUYER POUR CONTINUER"
label_settings = ExtResource("3_oodmm")

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_yfpdu")

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 40.0
offset_top = 463.0
offset_right = 140.0
offset_bottom = 563.0
texture_normal = ExtResource("6_w6kif")

[node name="Label" type="Label" parent="TextureButton"]
layout_mode = 0
offset_left = 11.0
offset_top = 19.0
offset_right = 88.0
offset_bottom = 84.0
text = "MENU"
label_settings = ExtResource("7_k7v2k")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
